@@ -44,10 +44,10 @@ Config:
     The 'fields' parameter specifies that only specific message data should be
     indexed into ElasticSearch. Available fields to choose are "Uuid",
     "Timestamp", "Type", "Logger", "Severity", "Payload", "EnvVersion", "Pid",
-    "Hostname", and "Fields" (where "Fields" causes the inclusion of any and
-    all dynamically specified message fields. Defaults to including all of the
-    supported message fields. The "Payload" field is sent to ElasticSearch as
-    "@message".
+    "Hostname", and "DynamicFields" (where "DynamicFields" causes the inclusion
+    of dynamically specified message fields, see ``dynamic_fields``). Defaults
+    to including all of the supported message fields. The "Payload" field is
+    sent to ElasticSearch as "@message".
 - timestamp (string):
     Format to use for timestamps in generated ES documents. Allows to use
     strftime format codes. Defaults to "%Y-%m-%dT%H:%M:%S".
@@ -65,6 +65,11 @@ Config:
     which contain embedded JSON objects to prevent the embedded JSON from
     being escaped as normal strings. Only supports dynamically specified
     message fields.
+- dynamic_fields ([]string):
+    This specifies which of the message's dynamic fields should be included in
+    the JSON output. Defaults to including all of the messages dynamic
+    fields. If ``dynamic_fields`` is non-empty, then the ``fields`` list *must*
+    contain "DynamicFields" or an error will be raised.
 
 Example
 
